--- a/src/components/ChessSquare/ChessSquare.module.scss
+++ b/src/components/ChessSquare/ChessSquare.module.scss
@@ -4,6 +4,10 @@
   height: 72px;
   background-color: var(--cyber-2);
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   &.dark_square {
     background-color: var(--cyber-4);
   }
