--- a/src/components/ChessSquare/ChessSquare.module.scss
+++ b/src/components/ChessSquare/ChessSquare.module.scss
@@ -2,14 +2,17 @@
   position: relative;
   width: 72px;
   height: 72px;
-  background-color: var(--cyber-2);
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  &.dark_square {
+  &.dark {
     background-color: var(--cyber-4);
+  }
+
+  &.light {
+    background-color: var(--cyber-2);
   }
 }
 
@@ -19,4 +22,21 @@
   left: 4px;
   font-size: 12px;
   color: var(--cyber-5)
+}
+
+.possible_move_indicator {
+  width: 24px;
+  height: 24px;
+  background-color: rgba(255, 255, 0, 0.7);
+  border-radius: 50%;
+}
+
+img.piece_img {
+  &.selected {
+    background-color: rgba(255, 42, 109, 0.5);
+  }
+
+  &.threatened {
+    background-color: rgba(255, 255, 0, 0.5);
+  }
 }
