--- a/src/components/ChessSquare/ChessSquare.module.scss
+++ b/src/components/ChessSquare/ChessSquare.module.scss
@@ -2,6 +2,7 @@
   position: relative;
   width: 72px;
   height: 72px;
+  box-sizing: border-box;
 
   display: flex;
   align-items: center;
@@ -13,6 +14,10 @@
 
   &.light {
     background-color: var(--cyber-2);
+  }
+
+  &.overlapped_targeted {
+    border: 4px solid rgba(255, 255, 0, 0.7);
   }
 }
 
@@ -38,5 +43,9 @@ img.piece_img {
 
   &.threatened {
     background-color: rgba(255, 255, 0, 0.5);
+  }
+
+  &.overlapped_threatened {
+    background-color: rgba(0, 255, 0, 0.5);
   }
 }
