--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,17 +7,39 @@
 }
 
 .logo {
-  font-size: 64px;
   color: var(--cyber-1);
+
+  @media screen and (min-width: 0px) {
+    font-size: 2rem;
+  }
+
+  @media screen and (min-width: 480px) {
+    font-size: 3rem;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 4rem;
+  }
 }
 
 .header {
   width: 100%;
-  height: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
   background: var(--cyber-6);
+
+  @media screen and (min-width: 0px) {
+    height: 60px;
+  }
+
+  @media screen and (min-width: 480px) {
+    height: 90px;
+  }
+
+  @media screen and (min-width: 768px) {
+    height: 120px;
+  }
 }
 
 .content {
