--- a/src/components/ChessSquare/ChessSquare.module.scss
+++ b/src/components/ChessSquare/ChessSquare.module.scss
@@ -1,8 +1,21 @@
 .chess_square {
   position: relative;
-  width: 72px;
-  height: 72px;
   box-sizing: border-box;
+
+  @media screen and (min-width: 0px) {
+    width: 36px;
+    height: 36px;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 54px;
+    height: 54px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 72px;
+    height: 72px;
+  }
 
   display: flex;
   align-items: center;
@@ -25,19 +38,60 @@
   position: absolute;
   top: 1px;
   left: 4px;
-  font-size: 12px;
+
+  @media screen and (min-width: 0px) {
+    font-size: 8px;
+  }
+
+  @media screen and (min-width: 480px) {
+    font-size: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+  }
+
   color: var(--cyber-5)
 }
 
 .possible_move_indicator {
-  width: 24px;
-  height: 24px;
   background-color: rgba(255, 255, 0, 0.7);
   border-radius: 50%;
+
+  @media screen and (min-width: 0px) {
+    height: 12px;
+    width: 12px;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 18px;
+    height: 18px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 img.piece_img {
+  @media screen and (min-width: 0px) {
+    height: 36px;
+    width: 36px;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 54px;
+    height: 54px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 72px;
+    height: 72px;
+  }
+
   &.selected {
+    opacity: 0.7;
     background-color: rgba(255, 42, 109, 0.5);
   }
 
